2013-01-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3: anchoring, recursion, ncra bugfix, ncrename
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Document union-mode and intersection-mode in nco.texi, and give
	examples with simultaneous anchoring and recursion

	* Add --ram_all to remaining usage strings in nco_ctl.c

	* Reorganize nco_grp_var_mk_trv2()

	* Rework details of NCO GSL code: use mss_val as argument name,
	eliminate C99/C++ "//" comment syntax, and attribute copyrights in original GSL code

2013-01-12  Charlie Zender  <zender@uci.edu>

	* Set is_crd_var to True in nco_var_fll() when variable referenced
	in either CF "bounds" or "coordinates" attributes. Effectively,
	the only consequence of this is that the arithmetic operators now
	treat CF coordinates like basic coordinates in all ways. More
	consistent to have time_bnds be an average, like time, rather than
	a total when -y ttl is specified. This simplifies nco_var_lst_dvd()
	which no longer separately checks for CF coordinates.

	* All regression tests pass on netCDF4-enabled NCO.

	* Enable new extraction maker nco_mk_xtr() version of ncks. This
	removes most explicit dependencies on netCDF format from main.c.
	MM3 temporarily disabled.

	* Tweak regression tests to work with intersections, non-recursive requests

2013-01-11  Charlie Zender  <zender@uci.edu>

	* Commit changes to all but source code files

2013-01-10  Charlie Zender  <zender@uci.edu>

	* Finish initializing flags. Implement unions/intersections.

2013-01-08  Pedro Vicente  <pvicente@uci.edu>

        * Add Qt/MSVC GSL 1.8d; to use add environment variables LIB_GSL and HEADER_GSL

2012-12-18  Charlie Zender  <zender@uci.edu>

	* More work on flags

	* Dupe netCDF4 stubs to present a fake library for manipulating netCDF3 files with the netCDF4 API
